# Frappe-app

./: Procfile  README.md
config/: redis_cache.conf  redis_queue.conf
env/: pyvenv.cfg
inventory_management/: README.md  pyproject.toml
inventory_management/inventory_management/: hooks.py
inventory_management/inventory_management/inventory_management/doctype/item/: item.js  item.json  item.py  test_item.py
inventory_management/inventory_management/inventory_management/doctype/stock_ledger/: stock_ledger.js  stock_ledger.json  stock_ledger.py  test_stock_ledger.py
inventory_management/inventory_management/inventory_management/doctype/stock_per_warehouse/: stock_per_warehouse.js  stock_per_warehouse.json  stock_per_warehouse.py  test_stock_per_warehouse.py
inventory_management/inventory_management/inventory_management/doctype/stock_transactions/: stock_transactions.js  stock_transactions.json  stock_transactions.py  test_stock_transactions.py
inventory_management/inventory_management/inventory_management/doctype/warehouse_location/: test_warehouse_location.py  warehouse_location.js  warehouse_location.json  warehouse_location.py
inventory_management/inventory_management/inventory_management/report/warehouse_report/: warehouse_report.json
logs/: database.log.1  database.log.2  database.log.3  database.log.4  database.log.5  database.log.6  database.log.7  database.log.8
sites/: apps.json  apps.txt  common_site_config.json
sites/assets/: assets-rtl.json  assets.json  erpnext  frappe  inventory_management
sites/inventory.localhost/: site_config.json
(+2 files in other folders)
